@@ -2,8 +2,4 @@
 
 EXTRA_DIST = README.ja MEMO.ja VERSION-ID
 
-SUBDIRS = intl include lib bin doc po
-
-update-po:
-	cd po && ${MAKE} update-po
-
+SUBDIRS = intl include lib programs doc po
