@@ -1,3 +1,7 @@
+2002-05-01  Kaz Sasayama  <Kaz.Sasayama@Hypercore.co.jp>
+
+	* POTFILES.in: Rename directory bin to programs.
+
 2002-04-30  gettextize  <bug-gnu-utils@gnu.org>
 
 	* Makefile.in.in: Upgrade to gettext-0.10.40.
