@@ -1,3 +1,11 @@
+2002-05-01  Kaz Sasayama  <Kaz.Sasayama@Hypercore.co.jp>
+
+	* Makefile.am (update-po): Removed.
+
+	* Rename directory bin to programs.
+	* configure.in: Updated.
+	* Makefile.am (SUBDIRS): Updated.
+
 2002-04-30  Kaz Sasayama  <Kaz.Sasayama@Hypercore.co.jp>
 
 	* configure.in: Rename ja_JP.eucJP to ja.
